# gpsephexercise

./: 2_etap.m  3_etap.cpp  KPYarovitsyn1.docx  KP_itog_Kirinko.docx  Kursovoy_proekt_itog.docx  АП_СРНС Курсовой итог.docx  АП_СРНС Курсовой(Мокшин).docx  АПСРНС.docx  ЗАКЛЮЧЕНИЕ.docx  Итоговый отчет по курсовому проекту.docx  КП АПСРНС.docx  КП№2 GPS (1).docx  КП№2 GPS.docx  ОТЧЕТ.docx  Отчет.doc  код 2 часть.docx  код 3 часть.docx  отчет.docx
Kursovoy3/: Kursovoy3.sln
libgpssvpos/: .gitignore  CMakeLists.txt  KP_CHAST_3.docx  KP_etap3.docx  Libgpssvpos.h  OutMatlab.txt  README.md  Source1.cpp  anna_kp.rar  gpssvpos.cpp  gpssvpos.h  gpsvspos.cpp  gpsvspos.h  kepler.cpp  kepler.h  main.cpp  part3(FullKP).docx  tests.cpp  tests.h  x_coords.txt  y_coords.txt  z_coords.txt  Курсовой Часть 2 и 3 Климова.docx  Курсовой проект Климова Анна ЭР-15-14.docx  Отчет. Курсовой проект. Часть 3.docx
libgpssvpos/src/: CMakeLists.txt  Kepler_equation.cpp  gpssvpos.cpp  kepler.cpp  main.cpp  Сoordinate_calculation.cpp
libgpssvpos/test/: CMakeLists.txt  check_position.cpp
processing/: BINR_evening.nav  BINR_morning.nav  Cursa_Apsrns_1chast.docx  KPpart2.m  Kursovoy proekt part 1.docx  Kursovoy_proekt_chast_1.docx  Part 1.docx  Part_1.docx  README.md  RoschinMA_1.docx  Source1.cpp  part3(FullKP).docx  АП_СРНС Курсовой итог.docx  КП #1.docx  КП Корогодин 2019.docx  КП№2 GPS.docx  КП№2.docx  Курсовой часть 1 Климова.docx  Отчет по результатам этапа 1.docx  Отчет. Часть 1.docx  Эфемериды_nav.txt
simulation/: 2part.m  APSRNS2.docx  APSRNS2ver2.docx  ECEFtoENU.m  KP CODE.m  KPYarovitsyn1.docx  KPYarovitsyn2.docx  KP_2.m  KP_CHAST_2.m  KP_Chast2_2.m  KP_Chast2_22.m  KP_etap2.m  Kp_chast2_2019.m  Kursovoy proekt chast'2.docx  Part2.docx  README.md  RoschinMA_etap2.docx  SkyView Trimble GNSS.docx  Yarovitsyn_CP.m  ecef2eci.m  ka.m  korodin2_ver2.m  kp.m  part2.m  (+14 more)
(+63 files in other folders)
